[project]
name = "python-dataflow"
version = "0.1.0"
description = "Apache Beam pipeline to consume Pub/Sub messages and write to BigQuery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-beam[gcp]>=2.53.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-bigquery>=3.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]
